# Medclimate

./: .gitignore  __init__.py  extractdata.ipynb  pyproject.toml
medclimate/: main.py
medclimate/api/: api.py
medclimate/config/: settings.py
medclimate/database/: postgeresql.py
medclimate/model/: base.py
medclimate/utils/: config.py
tests/: test_api.py
